Updated Traditional Chinese translation(Hong Kong). Updated Traditional
2008-03-08  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

        * zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
        * zh_TW.po: Updated Traditional Chinese translation(Taiwan).



svn path=/trunk/; revision=3106

--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -9,10 +9,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 2.16.0\n"
+"Project-Id-Version: yelp 2.21.90\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-02-17 21:10+0800\n"
-"PO-Revision-Date: 2008-02-17 21:10+0800\n"
+"POT-Creation-Date: 2008-03-08 21:46+0800\n"
+"PO-Revision-Date: 2008-03-08 21:46+0800\n"
 "Last-Translator: Hialan Liu <hialan.liu@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <community@linuxhall.org>\n"
 "MIME-Version: 1.0\n"
@@ -287,53 +287,48 @@ msgid "X11 Overviews"
 msgstr "X11 概覽"
 
 #: ../data/toc.xml.in.h:1
-#, fuzzy
 msgid "2D Graphics"
-msgstr "美工繪圖"
+msgstr "2D 繪圖"
 
 #: ../data/toc.xml.in.h:2
-#, fuzzy
 msgid "3D Graphics"
-msgstr "美工繪圖"
+msgstr "3D 繪圖"
 
 #: ../data/toc.xml.in.h:3
 msgid "Accessibility"
 msgstr "無障礙環境"
 
 #: ../data/toc.xml.in.h:4
-#, fuzzy
 msgid "Action Games"
-msgstr "第 3nas 節"
+msgstr "動作遊戲"
 
 #: ../data/toc.xml.in.h:5
 msgid "Adventure Games"
-msgstr ""
+msgstr "冒險遊戲"
 
 #: ../data/toc.xml.in.h:6
 msgid "Amusement"
-msgstr ""
+msgstr "娛樂"
 
 #: ../data/toc.xml.in.h:7
 msgid "Applications for viewing and manipulating graphics"
-msgstr ""
+msgstr "用於檢視及處理圖形的應用程式"
 
 #: ../data/toc.xml.in.h:8
-#, fuzzy
 msgid "Applications related to audio and video"
-msgstr "多媒體相關的程式"
+msgstr "音訊及視像相關的程式"
 
 #: ../data/toc.xml.in.h:9
-#, fuzzy
 msgid "Applications that teach or aid in learning"
-msgstr "支援協助技術的程式"
+msgstr "教學或支援協助技術的程式"
 
 #: ../data/toc.xml.in.h:10
 msgid "Arcade Games"
-msgstr ""
+msgstr "街機遊戲"
 
 #: ../data/toc.xml.in.h:11
 msgid "Archiving Tools"
-msgstr ""
+msgstr "歸檔工具"
 
 #: ../data/toc.xml.in.h:12
 msgid "Art"
@@ -341,7 +336,7 @@ msgstr "藝術"
 
 #: ../data/toc.xml.in.h:13
 msgid "Artificial Intelligence"
-msgstr ""
+msgstr "人工智能"
 
 #: ../data/toc.xml.in.h:14
 msgid "Astronomy"
@@ -349,190 +344,180 @@ msgstr "天文"
 
 #: ../data/toc.xml.in.h:15
 msgid "Biology"
-msgstr ""
+msgstr "生物學"
 
 #: ../data/toc.xml.in.h:16
 msgid "Blocks Games"
-msgstr ""
+msgstr "方塊遊戲"
 
 #: ../data/toc.xml.in.h:17
-#, fuzzy
 msgid "Board Games"
-msgstr "遊戲"
+msgstr "棋盤遊戲"
 
 #: ../data/toc.xml.in.h:18
 msgid "Building"
-msgstr ""
+msgstr "建立"
 
 #: ../data/toc.xml.in.h:19
-#, fuzzy
 msgid "Calculator"
-msgstr "協力者"
+msgstr "計數機"
 
 #: ../data/toc.xml.in.h:20
 msgid "Calendar"
 msgstr "行事曆"
 
 #: ../data/toc.xml.in.h:21
-#, fuzzy
 msgid "Card Games"
-msgstr "遊戲"
+msgstr "啤牌遊戲"
 
 #: ../data/toc.xml.in.h:22
 msgid "Charting Tools"
-msgstr ""
+msgstr "圖表工具"
 
 #: ../data/toc.xml.in.h:23
 msgid "Chat"
-msgstr ""
+msgstr "聊天"
 
 #: ../data/toc.xml.in.h:24
-#, fuzzy
 msgid "Chemistry"
-msgstr "瀏覽紀錄"
+msgstr "化學"
 
 #: ../data/toc.xml.in.h:25
 msgid "Clocks"
-msgstr ""
+msgstr "時鐘"
 
 #: ../data/toc.xml.in.h:26
 msgid "Compression Tools"
-msgstr ""
+msgstr "壓縮工具"
 
 #: ../data/toc.xml.in.h:27
 msgid "Computer Science"
-msgstr ""
+msgstr "電腦科學"
 
 #: ../data/toc.xml.in.h:28
-#, fuzzy
 msgid "Construction"
-msgstr "系統管理"
+msgstr "構造"
 
 #: ../data/toc.xml.in.h:29
 msgid "Contact Management"
-msgstr ""
+msgstr "聯絡人管理"
 
 #: ../data/toc.xml.in.h:30
 msgid "Data Visualization"
-msgstr ""
+msgstr "資料視覺化"
 
 #: ../data/toc.xml.in.h:31
 msgid "Databases"
-msgstr ""
+msgstr "資料庫"
 
 #: ../data/toc.xml.in.h:32
 msgid "Debuggers"
-msgstr ""
+msgstr "除錯器"
 
 #: ../data/toc.xml.in.h:33
 msgid "Desktop"
 msgstr "桌面"
 
 #: ../data/toc.xml.in.h:34
-#, fuzzy
 msgid "Desktop Settings"
-msgstr "設定值"
+msgstr "桌面設定值"
 
 #: ../data/toc.xml.in.h:36
 msgid "Dialup"
-msgstr ""
+msgstr "播接"
 
 #: ../data/toc.xml.in.h:37
 msgid "Dictionaries"
-msgstr ""
+msgstr "字典"
 
 #. Translators: this is a menu title for burning audio and video to dics
 #: ../data/toc.xml.in.h:39
 msgid "Disc Burning"
-msgstr ""
+msgstr "光碟燒錄"
 
 #: ../data/toc.xml.in.h:40
-#, fuzzy
 msgid "Economy"
-msgstr "天文"
+msgstr "經濟"
 
 #: ../data/toc.xml.in.h:41
 msgid "Education"
 msgstr "教育"
 
 #: ../data/toc.xml.in.h:42
-#, fuzzy
 msgid "Electricity"
-msgstr "安全性"
+msgstr "電學"
 
 #: ../data/toc.xml.in.h:43
 msgid "Electronics"
-msgstr ""
+msgstr "電子學"
 
 #: ../data/toc.xml.in.h:44
 msgid "Email Tools"
-msgstr ""
+msgstr "電子郵件工具"
 
 #: ../data/toc.xml.in.h:45
 msgid "Emulator"
-msgstr ""
+msgstr "模擬器"
 
 #: ../data/toc.xml.in.h:46
 msgid "Engineering"
-msgstr ""
+msgstr "工程"
 
 #: ../data/toc.xml.in.h:47
 msgid "File Manager"
-msgstr ""
+msgstr "檔案管理程式"
 
 #: ../data/toc.xml.in.h:48
 msgid "File Tools"
-msgstr ""
+msgstr "檔案工具"
 
 #: ../data/toc.xml.in.h:49
 msgid "File Transfer"
-msgstr ""
+msgstr "檔案傳輸程式"
 
 #: ../data/toc.xml.in.h:50
-#, fuzzy
 msgid "Filesystem"
-msgstr "系統"
+msgstr "檔案系統"
 
 #: ../data/toc.xml.in.h:51
 msgid "Financial Tools"
-msgstr ""
+msgstr "金融工具"
 
 #: ../data/toc.xml.in.h:52
 msgid "Flow Charting Tools"
-msgstr ""
+msgstr "流程圖工具"
 
 #: ../data/toc.xml.in.h:53
-#, fuzzy
 msgid "GNOME Applications"
-msgstr "應用程式"
+msgstr "GNOME 應用程式"
 
 #: ../data/toc.xml.in.h:54
 msgid "GTK"
-msgstr ""
+msgstr "GTK"
 
 #: ../data/toc.xml.in.h:55
 msgid "GUI Designers"
-msgstr ""
+msgstr "GUI 設計程式"
 
 #: ../data/toc.xml.in.h:57
 msgid "Generic applications for the GNOME environment"
-msgstr ""
+msgstr "GNOME 環境的一般應用程式"
 
 #: ../data/toc.xml.in.h:58
 msgid "Generic applications for the KDE environment"
-msgstr ""
+msgstr "KDE 環境的一般應用程式"
 
 #: ../data/toc.xml.in.h:59
 msgid "Geography"
-msgstr ""
+msgstr "地理"
 
 #: ../data/toc.xml.in.h:60
 msgid "Geology"
-msgstr ""
+msgstr "地質學"
 
 #: ../data/toc.xml.in.h:61
 msgid "Geoscience"
-msgstr ""
+msgstr "地球科學"
 
 #: ../data/toc.xml.in.h:62
 msgid "Graphics"
@@ -540,24 +525,23 @@ msgstr "美工繪圖"
 
 #: ../data/toc.xml.in.h:63
 msgid "Guides and manuals for applications that connect to the outside world"
-msgstr ""
+msgstr "與外界連接的應用程式的指南與手冊"
 
 #: ../data/toc.xml.in.h:64
 msgid "Guides for getting involved in development"
-msgstr ""
+msgstr "參與開放的指南"
 
 #: ../data/toc.xml.in.h:65
 msgid "Ham Radio"
-msgstr ""
+msgstr "無線電"
 
 #: ../data/toc.xml.in.h:66
-#, fuzzy
 msgid "Hardware Settings"
-msgstr "硬件裝置"
+msgstr "硬件設定值"
 
 #: ../data/toc.xml.in.h:67
 msgid "Have some fun"
-msgstr ""
+msgstr "玩得開心"
 
 #: ../data/toc.xml.in.h:68
 msgid "History"
@@ -565,19 +549,19 @@ msgstr "瀏覽紀錄"
 
 #: ../data/toc.xml.in.h:69
 msgid "IDEs"
-msgstr ""
+msgstr "整合式開發環境"
 
 #: ../data/toc.xml.in.h:70
 msgid "IRC Clients"
-msgstr ""
+msgstr "IRC 客戶端"
 
 #: ../data/toc.xml.in.h:71
 msgid "Image Processing"
-msgstr ""
+msgstr "圖片處理"
 
 #: ../data/toc.xml.in.h:72
 msgid "Instant Messaging"
-msgstr ""
+msgstr "即時訊息"
 
 #: ../data/toc.xml.in.h:73
 msgid "Internet"
@@ -585,65 +569,61 @@ msgstr "互聯網"
 
 #: ../data/toc.xml.in.h:74
 msgid "Java"
-msgstr ""
+msgstr "Java"
 
 #: ../data/toc.xml.in.h:75
-#, fuzzy
 msgid "KDE Applications"
-msgstr "應用程式"
+msgstr "KDE 應用程式"
 
 #: ../data/toc.xml.in.h:76
-#, fuzzy
 msgid "Kids Games"
-msgstr "遊戲"
+msgstr "兒童遊戲"
 
 #: ../data/toc.xml.in.h:77
 msgid ""
 "Learn more about making your system more accessible for a range of "
 "disabilities"
-msgstr ""
+msgstr "了解如何讓你的系統對一部分身心障礙者更具親和力"
 
 #: ../data/toc.xml.in.h:78
 msgid "Licenses"
-msgstr ""
+msgstr "授權"
 
 #: ../data/toc.xml.in.h:79
 msgid "Literature"
-msgstr ""
+msgstr "文學"
 
 #: ../data/toc.xml.in.h:80
-#, fuzzy
 msgid "Logic Games"
-msgstr "遊戲"
+msgstr "邏輯遊戲"
 
 #: ../data/toc.xml.in.h:81
 msgid "Math"
-msgstr ""
+msgstr "數學"
 
 #: ../data/toc.xml.in.h:82
 msgid "Medical Software"
-msgstr ""
+msgstr "醫學軟件"
 
 #: ../data/toc.xml.in.h:83
 msgid "Midi"
-msgstr ""
+msgstr "Midi"
 
 #: ../data/toc.xml.in.h:84
-#, fuzzy
 msgid "Miscellaneous Documentation"
 msgstr "其它文件"
 
 #: ../data/toc.xml.in.h:85
 msgid "Mixers"
-msgstr ""
+msgstr "混音器"
 
 #: ../data/toc.xml.in.h:86
 msgid "Monitor"
-msgstr ""
+msgstr "監視器"
 
 #: ../data/toc.xml.in.h:87
 msgid "Motif"
-msgstr ""
+msgstr "Motif"
 
 #: ../data/toc.xml.in.h:88
 msgid "Music"
@@ -651,22 +631,21 @@ msgstr "音樂"
 
 #: ../data/toc.xml.in.h:89
 msgid "News"
-msgstr ""
+msgstr "新聞"
 
 #: ../data/toc.xml.in.h:90
 msgid "Numerical Analysis"
-msgstr ""
+msgstr "數字分析"
 
 #: ../data/toc.xml.in.h:91
 msgid "OCR"
-msgstr ""
+msgstr "光學辨識(OCR)"
 
 #: ../data/toc.xml.in.h:92
 msgid "Office Applications"
 msgstr "辦公軟件"
 
 #: ../data/toc.xml.in.h:93
-#, fuzzy
 msgid "Office applications"
 msgstr "辦公軟件"
 
@@ -676,36 +655,36 @@ msgstr "其它文件"
 
 #: ../data/toc.xml.in.h:95
 msgid "P2P"
-msgstr ""
+msgstr "P2P"
 
 #: ../data/toc.xml.in.h:96
 msgid "PDA Communication"
-msgstr ""
+msgstr "PDA 通訊"
 
 #: ../data/toc.xml.in.h:97
 msgid "Package Manager"
-msgstr ""
+msgstr "套件管理程式"
 
 #: ../data/toc.xml.in.h:98
 msgid "Parallel Computing"
-msgstr ""
+msgstr "平行運算"
 
 #: ../data/toc.xml.in.h:99
 msgid "Photography"
-msgstr ""
+msgstr "攝影"
 
 #: ../data/toc.xml.in.h:100
 msgid "Physics"
-msgstr ""
+msgstr "物理"
 
 #. Translators: this is a menu title for audio and video players
 #: ../data/toc.xml.in.h:102
 msgid "Players"
-msgstr ""
+msgstr "播放程式"
 
 #: ../data/toc.xml.in.h:103
 msgid "Presentation Tools"
-msgstr ""
+msgstr "簡報工具"
 
 #: ../data/toc.xml.in.h:104 ../src/yelp-print.c:337 ../src/yelp-print.c:364
 msgid "Printing"
@@ -713,55 +692,52 @@ msgstr "打印"
 
 #: ../data/toc.xml.in.h:105
 msgid "Profiling Tools"
-msgstr ""
+msgstr "性能評測工具"
 
 #: ../data/toc.xml.in.h:106
 msgid "Project Management Tools"
-msgstr ""
+msgstr "專案管理工具"
 
 #: ../data/toc.xml.in.h:107
-#, fuzzy
 msgid "Publishing"
-msgstr "出版者"
+msgstr "出版"
 
 #: ../data/toc.xml.in.h:108
 msgid "Qt"
-msgstr ""
+msgstr "Qt"
 
 #: ../data/toc.xml.in.h:109
-#, fuzzy
 msgid "Raster Graphics"
-msgstr "美工繪圖"
+msgstr "光柵繪圖"
 
 #. Translators: this is a menu title for audio and video recorders
 #: ../data/toc.xml.in.h:111
 msgid "Recorders"
-msgstr ""
+msgstr "錄音程式"
 
 #: ../data/toc.xml.in.h:112
 msgid "Remote Access"
-msgstr ""
+msgstr "遠端存取"
 
 #: ../data/toc.xml.in.h:113
 msgid "Revision Control"
-msgstr ""
+msgstr "版本修訂工具"
 
 #: ../data/toc.xml.in.h:114
 msgid "Robotics"
-msgstr ""
+msgstr "機械人科技"
 
 #: ../data/toc.xml.in.h:115
 msgid "Role Playing Games"
-msgstr ""
+msgstr "角色扮演遊戲"
 
 #: ../data/toc.xml.in.h:116
 msgid "Scanning"
-msgstr ""
+msgstr "掃描"
 
 #: ../data/toc.xml.in.h:117
-#, fuzzy
 msgid "Science"
-msgstr "讀者"
+msgstr "科學"
 
 #: ../data/toc.xml.in.h:118
 msgid "Security"
@@ -769,7 +745,7 @@ msgstr "安全性"
 
 #: ../data/toc.xml.in.h:119
 msgid "Sequencers"
-msgstr ""
+msgstr "序列器"
 
 #: ../data/toc.xml.in.h:120
 msgid "Settings"
@@ -777,11 +753,11 @@ msgstr "設定值"
 
 #: ../data/toc.xml.in.h:121
 msgid "Settings users can manipulate to make their environment more pleasant"
-msgstr ""
+msgstr "使用者可以調整以使其環境更舒適的設定值"
 
 #: ../data/toc.xml.in.h:122
 msgid "Simulation Games"
-msgstr ""
+msgstr "模擬遊戲"
 
 #: ../data/toc.xml.in.h:123
 msgid "Sound"
@@ -792,25 +768,24 @@ msgid "Sound &amp; Video"
 msgstr "聲音及視像"
 
 #: ../data/toc.xml.in.h:125
-#, fuzzy
 msgid "Sound &amp; Video Editing"
-msgstr "聲音及視像"
+msgstr "聲音及視像編輯"
 
 #: ../data/toc.xml.in.h:126
 msgid "Sports"
-msgstr ""
+msgstr "運動"
 
 #: ../data/toc.xml.in.h:127
 msgid "Sports Games"
-msgstr ""
+msgstr "運動遊戲"
 
 #: ../data/toc.xml.in.h:128
 msgid "Spreadsheet Tools"
-msgstr ""
+msgstr "試算表工具"
 
 #: ../data/toc.xml.in.h:129
 msgid "Strategy Games"
-msgstr ""
+msgstr "策略遊戲"
 
 #: ../data/toc.xml.in.h:130
 msgid "System"
@@ -818,39 +793,39 @@ msgstr "系統"
 
 #: ../data/toc.xml.in.h:131
 msgid "TV"
-msgstr ""
+msgstr "電視"
 
 #: ../data/toc.xml.in.h:132
 msgid "Telephony"
-msgstr ""
+msgstr "電話"
 
 #: ../data/toc.xml.in.h:133
 msgid "Telephony Tools"
-msgstr ""
+msgstr "電話工具"
 
 #: ../data/toc.xml.in.h:134
 msgid "Terminal Emulator"
-msgstr ""
+msgstr "終端機模擬程式"
 
 #: ../data/toc.xml.in.h:135
 msgid "Text Editors"
-msgstr ""
+msgstr "文字編輯器"
 
 #: ../data/toc.xml.in.h:136
 msgid "Text Tools"
-msgstr ""
+msgstr "文字工具"
 
 #: ../data/toc.xml.in.h:137
 msgid "Tools to help you manage your computer"
-msgstr ""
+msgstr "協助管理你的電腦的工具"
 
 #: ../data/toc.xml.in.h:138
 msgid "Translation Tools"
-msgstr ""
+msgstr "翻譯工具"
 
 #: ../data/toc.xml.in.h:139
 msgid "Tuners"
-msgstr ""
+msgstr "調諧器"
 
 #: ../data/toc.xml.in.h:140
 msgid "Utilities"
@@ -858,12 +833,11 @@ msgstr "公用程式"
 
 #: ../data/toc.xml.in.h:141
 msgid "Utilities to help you get work done"
-msgstr ""
+msgstr "協助你完成工作的公用程式"
 
 #: ../data/toc.xml.in.h:142
-#, fuzzy
 msgid "Vector Graphics"
-msgstr "美工繪圖"
+msgstr "向量繪圖"
 
 #: ../data/toc.xml.in.h:143
 msgid "Video"
@@ -871,7 +845,7 @@ msgstr "視像"
 
 #: ../data/toc.xml.in.h:144
 msgid "Video Conference"
-msgstr ""
+msgstr "視像會議"
 
 #. Translators: This is a menu title for graphics viewing applications
 #: ../data/toc.xml.in.h:146
@@ -879,14 +853,12 @@ msgid "Viewer"
 msgstr "圖片顯示"
 
 #: ../data/toc.xml.in.h:147
-#, fuzzy
 msgid "Web Browser"
-msgstr "說明文件瀏覽程式"
+msgstr "網頁瀏覽程式"
 
 #: ../data/toc.xml.in.h:148
-#, fuzzy
 msgid "Web Development"
-msgstr "開發"
+msgstr "網頁開發程式"
 
 #: ../data/toc.xml.in.h:149
 msgid "Welcome to the GNOME Help Browser"
@@ -894,7 +866,7 @@ msgstr "歡迎使用 GNOME 說明文件瀏覽程式"
 
 #: ../data/toc.xml.in.h:150
 msgid "Word Processors"
-msgstr ""
+msgstr "文字處理器"
 
 #: ../data/ui/yelp.glade.h:1
 msgid "<b>Accessibility</b>"
@@ -1242,7 +1214,7 @@ msgstr "NULL"
 
 #: ../src/yelp-search-parser.c:1095
 msgid "No Comment"
-msgstr ""
+msgstr "沒有註解"
 
 #. Much bigger problems
 #: ../src/yelp-search.c:238
