--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,11 +1,15 @@
+2008-03-08  Gintautas Miliauskas  <gintas@akl.lt>
+
+	* lt.po: Updated Lithuanian translation.
+
 2008-03-08  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
-        * zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
-        * zh_TW.po: Updated Traditional Chinese translation(Taiwan).
+	* zh_HK.po: Updated Traditional Chinese translation (Hong Kong).
+	* zh_TW.po: Updated Traditional Chinese translation (Taiwan).
 
 2008-03-07 Maxim Dziumanenko <dziumanenko@gmail.com>
 
-        * uk.po: Update Ukrainian translation.
+	* uk.po: Update Ukrainian translation.
 
 2008-03-05  Priit Laes  <plaes at svn dot gnome dot org>
 
