--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+=== 2.22.0 ===
+
+2008-03-09  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* configure.in:
+	* NEWS:
+	Version 2.22.0
+
 2008-02-02  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-man.c:
