--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,43 @@
+Changed in 2.22.0:
+------------------
+
+* fix bug #476498
+* Remove some unwanted debug spew
+* Updated translations:
+ * ar (Abdelmonam Kouka and Djihed Afifi)
+ * as (Amitakhya Phukan)
+ * be@latin (Ihar Hrachyshka)
+ * bn_IN (Runa Bhattacharjee)
+ * ca (Gil Forcada)
+ * cs (Petr Kovar
+ * da (Kenneth Nielsen)
+ * de (Jochen Skulj)
+ * en_GB (Philip Withnall)
+ * es (Jorge Gonzalez)
+ * et (Ivar Smolin and Priit Laes)
+ * fi (Ilkka Tuohela)
+ * gl (Ignacio Casal Quinteiro)
+ * he (Yair Hershkovitz)
+ * it (Milo Casagrande)
+ * ja (Takeshi AIHANA)
+ * ko (Changwoo Ryu)
+ * lt (Gintautas Miliauskas)
+ * mk (Jovan Naumovski)
+ * mr (Sandeep Shedmake
+ * ne (Pawan Chitrakar)
+ * nl (Reinout van Schouwen)
+ * oc (Yannig Marchegay)
+ * pl (Artur Flinta and the GNOME PL Team)
+ * pt (Duarte Loreto)
+ * pt_BR (Jonh Wendell)
+ * ta (Tirumurthi Vasudevan
+ * th (Theppitak Karoonboonyanan
+ * tr (Serdar Cicek)
+ * uk (Maxim Dziumanenko)
+ * vi (Nguyễn Thái Ngọc Duy)
+ * zh_HK (Chao-Hsiung Liao)
+ * zh_TW (Chao-Hsiung Liao)
+
 Changed in 2.21.90:
 -------------------
 
