--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-12  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation updated
+
 2008-03-12  Nikos Charonitakis  <nikosx@gmail.com>
 
 	* el.po: Updated Greek translation.
