--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-16  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation updated
+
 2008-03-13  Simos Xenitellis  <simos@gnome.org>
 
 	* el.po: Updated Greek translation by Giannis Katsampiris.
