Some fixes by David Planella
svn path=/trunk/; revision=3115

--- a/po/ca.po
+++ b/po/ca.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-02-09 00:59+0100\n"
-"PO-Revision-Date: 2008-02-09 01:01+0100\n"
+"POT-Creation-Date: 2008-03-18 23:21+0100\n"
+"PO-Revision-Date: 2008-03-18 23:22+0100\n"
 "Last-Translator: Gil Forcada <gilforcada@guifi.net>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
 "MIME-Version: 1.0\n"
@@ -810,7 +810,7 @@ msgstr "Editors de text"
 
 #: ../data/toc.xml.in.h:136
 msgid "Text Tools"
-msgstr "Eines del text"
+msgstr "Eines de text"
 
 #: ../data/toc.xml.in.h:137
 msgid "Tools to help you manage your computer"
@@ -863,7 +863,7 @@ msgstr "Us donem la benvinguda al navegador de l'ajuda del GNOME"
 
 #: ../data/toc.xml.in.h:150
 msgid "Word Processors"
-msgstr "Processadors de texts"
+msgstr "Processadors de text"
 
 #: ../data/ui/yelp.glade.h:1
 msgid "<b>Accessibility</b>"
@@ -1236,7 +1236,7 @@ msgstr "No s'ha pogut processar la cerca"
 
 #: ../src/yelp-search.c:239
 msgid "The requested search could not be processed."
-msgstr "No s'ha pogut processar la cerca efectuada."
+msgstr "No s'ha pogut processar la cerca sol·licitada."
 
 #: ../src/yelp-search.c:366
 msgid "Cannot process the search"
