--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-18  Gil Forcada  <gforcada@gnome.org>
+
+	* ca.po: Some fixes by David Planella.
+
 2008-03-16  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated
