Translation updated by Ivar Smolin
2008-03-20  Priit Laes  <plaes at svn dot gnome dot org>

	* et.po: Translation updated by Ivar Smolin

svn path=/trunk/; revision=3116

--- a/po/et.po
+++ b/po/et.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-01-14 07:58+0000\n"
-"PO-Revision-Date: 2008-03-04 12:56+0200\n"
+"PO-Revision-Date: 2008-03-13 09:51+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -1099,7 +1099,7 @@ msgstr ""
 
 #: ../src/yelp-main.c:92
 msgid "Use a private session"
-msgstr "Uus privaatne sessioon"
+msgstr "Uus privaatne seanss"
 
 #: ../src/yelp-main.c:101
 msgid "Define which cache directory to use"
@@ -1310,7 +1310,7 @@ msgstr "_Järjehoidjad"
 
 #: ../src/yelp-window.c:308
 msgid "_Help"
-msgstr "_Abi"
+msgstr "A_bi"
 
 #: ../src/yelp-window.c:311
 msgid "_New Window"
