--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-20  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Ivar Smolin
+
 2008-03-18  Gil Forcada  <gforcada@gnome.org>
 
 	* ca.po: Some fixes by David Planella.
