Translation updated by Ivar Smolin
2008-03-23  Priit Laes  <plaes at svn dot gnome dot org>

	* et.po: Translation updated by Ivar Smolin

svn path=/trunk/; revision=3117

--- a/po/et.po
+++ b/po/et.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-01-14 07:58+0000\n"
-"PO-Revision-Date: 2008-03-13 09:51+0200\n"
+"PO-Revision-Date: 2008-03-21 10:20+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -300,7 +300,7 @@ msgstr "Hõlbustused"
 
 #: ../data/toc.xml.in.h:4
 msgid "Action Games"
-msgstr ""
+msgstr "Seiklusmängud"
 
 #: ../data/toc.xml.in.h:5
 msgid "Adventure Games"
@@ -356,7 +356,7 @@ msgstr "Lauamängud"
 
 #: ../data/toc.xml.in.h:18
 msgid "Building"
-msgstr ""
+msgstr "Ehitus"
 
 #: ../data/toc.xml.in.h:19
 msgid "Calculator"
@@ -372,7 +372,7 @@ msgstr "Kaardimängud"
 
 #: ../data/toc.xml.in.h:22
 msgid "Charting Tools"
-msgstr ""
+msgstr "Diagrammide tööriistad"
 
 #: ../data/toc.xml.in.h:23
 msgid "Chat"
@@ -485,7 +485,7 @@ msgstr "Finantsvahendid"
 
 #: ../data/toc.xml.in.h:52
 msgid "Flow Charting Tools"
-msgstr ""
+msgstr "Voodiagrammide tööriistad"
 
 #: ../data/toc.xml.in.h:53
 msgid "GNOME Applications"
@@ -549,7 +549,7 @@ msgstr "Ajalugu"
 
 #: ../data/toc.xml.in.h:69
 msgid "IDEs"
-msgstr ""
+msgstr "Integreeritud arenduskeskkonnad"
 
 #: ../data/toc.xml.in.h:70
 msgid "IRC Clients"
@@ -584,6 +584,7 @@ msgid ""
 "Learn more about making your system more accessible for a range of "
 "disabilities"
 msgstr ""
+"Abitekstid süsteemi hõlbustuste seadmiseks erivajadustega inimeste jaoks"
 
 #: ../data/toc.xml.in.h:78
 msgid "Licenses"
@@ -635,7 +636,7 @@ msgstr "Uudised"
 
 #: ../data/toc.xml.in.h:90
 msgid "Numerical Analysis"
-msgstr ""
+msgstr "Matemaatiline analüüs"
 
 #: ../data/toc.xml.in.h:91
 msgid "OCR"
@@ -655,11 +656,11 @@ msgstr "Muu dokumentatsioon"
 
 #: ../data/toc.xml.in.h:95
 msgid "P2P"
-msgstr ""
+msgstr "Partnervõrgud (P2P)"
 
 #: ../data/toc.xml.in.h:96
 msgid "PDA Communication"
-msgstr ""
+msgstr "Suhtlemine pihuseadmetega"
 
 #: ../data/toc.xml.in.h:97
 msgid "Package Manager"
@@ -667,7 +668,7 @@ msgstr "Pakihaldur"
 
 #: ../data/toc.xml.in.h:98
 msgid "Parallel Computing"
-msgstr ""
+msgstr "Paralleelarvutused"
 
 #: ../data/toc.xml.in.h:99
 msgid "Photography"
@@ -680,7 +681,7 @@ msgstr "Füüsika"
 #. Translators: this is a menu title for audio and video players
 #: ../data/toc.xml.in.h:102
 msgid "Players"
-msgstr ""
+msgstr "Audio- ja videoesitajad"
 
 #: ../data/toc.xml.in.h:103
 msgid "Presentation Tools"
@@ -753,7 +754,7 @@ msgstr "Sätted"
 
 #: ../data/toc.xml.in.h:121
 msgid "Settings users can manipulate to make their environment more pleasant"
-msgstr ""
+msgstr "Sätted, mille abil kasutajad saavad oma töökeskkonda mugavamaks muuta"
 
 #: ../data/toc.xml.in.h:122
 msgid "Simulation Games"
@@ -809,7 +810,7 @@ msgstr "Terminaliemulaator"
 
 #: ../data/toc.xml.in.h:135
 msgid "Text Editors"
-msgstr "Tekstitoimetid"
+msgstr "Tekstiredaktorid"
 
 #: ../data/toc.xml.in.h:136
 msgid "Text Tools"
@@ -817,7 +818,7 @@ msgstr "Tekstitööriistad"
 
 #: ../data/toc.xml.in.h:137
 msgid "Tools to help you manage your computer"
-msgstr "Kasulikud tööriistad sinu arvuti haldamiseks"
+msgstr "Kasulikud tööriistad Sinu arvuti haldamiseks"
 
 #: ../data/toc.xml.in.h:138
 msgid "Translation Tools"
@@ -825,7 +826,7 @@ msgstr "Tõlkimisvahendid"
 
 #: ../data/toc.xml.in.h:139
 msgid "Tuners"
-msgstr ""
+msgstr "Tuunerid"
 
 #: ../data/toc.xml.in.h:140
 msgid "Utilities"
@@ -866,7 +867,7 @@ msgstr "Tere tulemast GNOME'i Abiteabe sirvijasse"
 
 #: ../data/toc.xml.in.h:150
 msgid "Word Processors"
-msgstr ""
+msgstr "Tekstitöötlusprogrammid"
 
 #: ../data/ui/yelp.glade.h:1
 msgid "<b>Accessibility</b>"
@@ -902,7 +903,7 @@ msgstr "Eelistused"
 
 #: ../data/ui/yelp.glade.h:9
 msgid "Re_name"
-msgstr "_Nimeta ümber"
+msgstr "Muuda _nime"
 
 #: ../data/ui/yelp.glade.h:10
 msgid "_Bookmarks:"
@@ -1526,52 +1527,4 @@ msgstr "Dokumentatsioonisirvija Gnome töölaua jaoks."
 
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
-msgstr "Abistab GNOMEi kasutamisel"
-
-#~ msgid "Email"
-#~ msgstr "E-post"
-
-#~ msgid "Finance"
-#~ msgstr "Rahandus"
-
-#~ msgid "Accessories"
-#~ msgstr "Tarvikud"
-
-#~ msgid "Applications for fun"
-#~ msgstr "Rakendused lõbustuseks"
-
-#~ msgid "Applications for word processing and other office tasks"
-#~ msgstr "Tekstitöötluseks ja muude kontoriülesanneteks mõeldud rakendused"
-
-#~ msgid "Applications related to multimedia"
-#~ msgstr "Multimeediaga seotud rakendused"
-
-#~ msgid "Applications related to software development"
-#~ msgstr "Tarkvaraarendusega seotud rakendused"
-
-#~ msgid "Applications specific to the panel"
-#~ msgstr "Paneeliga seotud rakendused"
-
-#~ msgid "Applications that support assistive technologies"
-#~ msgstr "Abistavaid tehnoloogiaid toetavad rakendused"
-
-#~ msgid "Learning applications"
-#~ msgstr "Õpperakendused"
-
-#~ msgid "Office"
-#~ msgstr "Kontoritarkvara"
-
-#~ msgid "Panel Applets"
-#~ msgstr "Paneeli rakendid"
-
-#~ msgid "Programming"
-#~ msgstr "Programmeerimine"
-
-#~ msgid "Scientific Applications."
-#~ msgstr "Teadusrakendused"
-
-#~ msgid "Utility applications"
-#~ msgstr "Kasulikud rakendused"
-
-#~ msgid "Variety of other applications"
-#~ msgstr "Valik muid rakendusi"
+msgstr "Abistab GNOME kasutamisel"
