--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-31  Eskild Hustvedt  <eskildh@gnome.org>
+
+	* nn.po: Updated the Norwegian Nynorsk translation
+
 2008-03-23  Priit Laes  <plaes at svn dot gnome dot org>
 
 	* et.po: Translation updated by Ivar Smolin
