--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-02  Petr Kovar  <pknbe@volny.cz>
+
+	* cs.po: Fixed Czech translation.
+
 2008-03-31  Eskild Hustvedt  <eskildh@gnome.org>
 
 	* nn.po: Updated the Norwegian Nynorsk translation
