--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-07  Yuriy Penkin <yura.penkin@gmail.com>
+
+	* ru.po: Updated Russian translation.
+
 2008-04-02  Petr Kovar  <pknbe@volny.cz>
 
 	* cs.po: Fixed Czech translation.
