--- a/po/ru.po
+++ b/po/ru.po
@@ -1,23 +1,23 @@
-# translation of ru.po to Russian
-# translation of yelp.pot to Russian
+# Russian translation of yelp
 # Copyright (C) 2002, 2004, 2005, 2006, 2008 Free Software Foundation, Inc.
 #
 # Igor Androsov <blace@mail.ru>, 2002.
 # Dmitry G. Mastrukov <dmitry@taurussoft.org>, 2002-2004.
 # Leonid Kanter <leon@asplinux.ru>, 2004, 2005, 2006, 2008.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-03-03 15:06+0200\n"
-"PO-Revision-Date: 2008-03-03 15:39+0200\n"
-"Last-Translator: Leonid Kanter <leon@asplinux.ru>\n"
-"Language-Team: Russian <en@li.org>\n"
+"POT-Creation-Date: 2008-04-07 00:18+0400\n"
+"PO-Revision-Date: 2008-04-06 20:59+0300\n"
+"Last-Translator: Yuriy Penkin <yura.penkin@gmail.com>\n"
+"Language-Team: Russian <gnome-cyr@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: ../data/info.xml.in.h:1
 msgid "GNU Info Pages"
@@ -296,9 +296,8 @@ msgid "Accessibility"
 msgstr "Специальные возможности"
 
 #: ../data/toc.xml.in.h:4
-#, fuzzy
 msgid "Action Games"
-msgstr "Раздел 3nas"
+msgstr "Активные игры"
 
 #: ../data/toc.xml.in.h:5
 msgid "Adventure Games"
@@ -306,7 +305,7 @@ msgstr "Приключенческие игры"
 
 #: ../data/toc.xml.in.h:6
 msgid "Amusement"
-msgstr ""
+msgstr "Развлечение"
 
 #: ../data/toc.xml.in.h:7
 msgid "Applications for viewing and manipulating graphics"
@@ -317,9 +316,8 @@ msgid "Applications related to audio and video"
 msgstr "Приложения, относящиеся к звуку и видео"
 
 #: ../data/toc.xml.in.h:9
-#, fuzzy
 msgid "Applications that teach or aid in learning"
-msgstr "Приложения, относящиеся к интернету"
+msgstr "Приложения, которые учат или помогают в изучении"
 
 #: ../data/toc.xml.in.h:10
 msgid "Arcade Games"
@@ -327,7 +325,7 @@ msgstr "Аркадные игры"
 
 #: ../data/toc.xml.in.h:11
 msgid "Archiving Tools"
-msgstr ""
+msgstr "Средства архивации"
 
 #: ../data/toc.xml.in.h:12
 msgid "Art"
@@ -355,7 +353,7 @@ msgstr "Настольные игры"
 
 #: ../data/toc.xml.in.h:18
 msgid "Building"
-msgstr ""
+msgstr "Сборка"
 
 #: ../data/toc.xml.in.h:19
 msgid "Calculator"
@@ -387,7 +385,7 @@ msgstr "Часы"
 
 #: ../data/toc.xml.in.h:26
 msgid "Compression Tools"
-msgstr ""
+msgstr "Средства сжатия"
 
 #: ../data/toc.xml.in.h:27
 msgid "Computer Science"
@@ -484,7 +482,7 @@ msgstr "Средства управления финансами"
 
 #: ../data/toc.xml.in.h:52
 msgid "Flow Charting Tools"
-msgstr ""
+msgstr "Средства создания блок-схем"
 
 #: ../data/toc.xml.in.h:53
 msgid "GNOME Applications"
@@ -496,7 +494,7 @@ msgstr "GTK"
 
 #: ../data/toc.xml.in.h:55
 msgid "GUI Designers"
-msgstr ""
+msgstr "Редакторы пользовательского интерфейса"
 
 #: ../data/toc.xml.in.h:57
 msgid "Generic applications for the GNOME environment"
@@ -516,7 +514,7 @@ msgstr "Геология"
 
 #: ../data/toc.xml.in.h:61
 msgid "Geoscience"
-msgstr ""
+msgstr "Наука о Земле"
 
 #: ../data/toc.xml.in.h:62
 msgid "Graphics"
@@ -525,6 +523,7 @@ msgstr "Графика"
 #: ../data/toc.xml.in.h:63
 msgid "Guides and manuals for applications that connect to the outside world"
 msgstr ""
+"Инструкции и руководства для приложений, которые связываются с внешним миром"
 
 #: ../data/toc.xml.in.h:64
 msgid "Guides for getting involved in development"
@@ -540,7 +539,7 @@ msgstr "Настройка аппаратных средств"
 
 #: ../data/toc.xml.in.h:67
 msgid "Have some fun"
-msgstr ""
+msgstr "Повеселимся"
 
 #: ../data/toc.xml.in.h:68
 msgid "History"
@@ -583,6 +582,8 @@ msgid ""
 "Learn more about making your system more accessible for a range of "
 "disabilities"
 msgstr ""
+"Узнайте больше о том, как сделать вашу систему более удобной с учётом "
+"ограниченных возможностей"
 
 #: ../data/toc.xml.in.h:78
 msgid "Licenses"
@@ -691,7 +692,7 @@ msgstr "Печать"
 
 #: ../data/toc.xml.in.h:105
 msgid "Profiling Tools"
-msgstr "Профайлеры"
+msgstr "Средства профилирования"
 
 #: ../data/toc.xml.in.h:106
 msgid "Project Management Tools"
@@ -747,13 +748,14 @@ msgid "Sequencers"
 msgstr "Секвенсоры"
 
 #: ../data/toc.xml.in.h:120
-#, fuzzy
 msgid "Settings"
-msgstr "Раздел 1ssl"
+msgstr "Настройки"
 
 #: ../data/toc.xml.in.h:121
 msgid "Settings users can manipulate to make their environment more pleasant"
 msgstr ""
+"Настройки, которые могут менять пользователи, чтобы получить более приятное "
+"окружение"
 
 #: ../data/toc.xml.in.h:122
 msgid "Simulation Games"
@@ -801,7 +803,7 @@ msgstr "Телефония"
 
 #: ../data/toc.xml.in.h:133
 msgid "Telephony Tools"
-msgstr "Утилиты для телефонии"
+msgstr "Приложения телефонии"
 
 #: ../data/toc.xml.in.h:134
 msgid "Terminal Emulator"
@@ -817,7 +819,7 @@ msgstr "Средства для работы с текстами"
 
 #: ../data/toc.xml.in.h:137
 msgid "Tools to help you manage your computer"
-msgstr "Утилиты для управления вашим компьютером"
+msgstr "Инструменты для управления компьютером"
 
 #: ../data/toc.xml.in.h:138
 msgid "Translation Tools"
@@ -829,12 +831,11 @@ msgstr "Тюнеры"
 
 #: ../data/toc.xml.in.h:140
 msgid "Utilities"
-msgstr "Утилиты"
+msgstr "Инструменты"
 
 #: ../data/toc.xml.in.h:141
-#, fuzzy
 msgid "Utilities to help you get work done"
-msgstr "Утилиты для управления вашим компьютером"
+msgstr "Вспомогательные приложения, которые помогают вам сделать вашу работу"
 
 #: ../data/toc.xml.in.h:142
 msgid "Vector Graphics"
@@ -1083,7 +1084,8 @@ msgstr "Сведения об этой ошибке недоступны."
 
 #: ../src/yelp-info.c:396
 #, c-format
-msgid "The file ‘%s’ could not be parsed because it is not a well-formed info page."
+msgid ""
+"The file ‘%s’ could not be parsed because it is not a well-formed info page."
 msgstr ""
 "Не удалось разобрать файл «%s», потому что он не является корректной "
 "страницей в формате info."
@@ -1116,7 +1118,8 @@ msgstr "Справка"
 
 #: ../src/yelp-man.c:459
 #, c-format
-msgid "The file ‘%s’ could not be parsed because it is not a well-formed man page."
+msgid ""
+"The file ‘%s’ could not be parsed because it is not a well-formed man page."
 msgstr ""
 "Не удалось разобрать файл «%s». Файл не является корректной страницей в "
 "формате помощи man."
@@ -1525,4 +1528,3 @@ msgstr "Программа просмотра документации для с
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Получение справки в среде GNOME"
-
