--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-07  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-window.c:
+	- Don't launch external programs under GDM (#525447)
+
 === 2.22.0 ===
 
 2008-03-09  Don Scorgie  <dscorgie@svn.gnome.org>
