--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+=== 2.22.1 ===
+
+2008-04-07  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	* NEWS:
+	- Version 2.22.1
+
 2008-04-07  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-window.c:
