--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Changed in 2.22.1:
+------------------
+* Don't launch external programs under GDM (#525447)
+  - Distributors please note this is a security issue
+* Updated translations:
+  ru      (Yuriy Penkin)
+  cs      (Petr Kovar)
+  nn      (Eskild Hustvedt)
+  et      (Ivar Smolin)
+  ca      (David Planella)
+  hu      (Gabor Kelemen)
+  el      (Giannis Katsampiris)
+
 Changed in 2.22.0:
 ------------------
 
