--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-20  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation.
+
 2008-04-07  Yuriy Penkin <yura.penkin@gmail.com>
 
 	* ru.po: Updated Russian translation.
