--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2008-04-30  Andre Klapper  <a9016009@gmx.de>
+
+	* LINGUAS:
+	* fur.po: Added Friulian translation on behalf of
+	the Friulian team. Fixes bug #530509.
+
 2008-04-20  Yair Hershkovitz  <yairhr@gmail.com>
 
 	* he.po: Updated Hebrew translation.
